# BSI

./: .env.example  .gitignore  README.md  pyproject.toml
src/bsi/: config.py
src/bsi/application/rule_engine/: commands.py  dto.py  ports.py  service.py
src/bsi/domain/rules/: conditions.py  conflicts.py  engine.py  enums.py  evaluator.py  models.py  ranking.py  scope.py
src/bsi/domain/transactions/: __init__.py  amounts.py  enums.py  models.py
src/bsi/infrastructure/database/: base.py  session.py
src/bsi/infrastructure/database/mappers/: decision.py  rule.py  transaction.py
src/bsi/infrastructure/database/models/: __init__.py  decision.py  rule.py  transaction.py
src/bsi/infrastructure/ingestion/: dataframe_adapter.py  file_reader.py  ingestor.py  row_adapter.py
src/bsi/infrastructure/rule_engine/: repositories.py
tests/integration/rule_engine/: test_rule_engine_workflow.py
tests/unit/: test_config.py
tests/unit/application/rule_engine/: test_commands.py  test_dto.py  test_ports.py  test_service.py
tests/unit/domain/rules/: test_conditions.py  test_conflicts.py  test_engine.py  test_enums.py  test_evaluator.py  test_models.py  test_ranking.py  test_scope.py
tests/unit/domain/transactions/: test_amounts.py  test_enums.py  test_models.py
tests/unit/infrastructure/database/: test_base.py  test_session.py
tests/unit/infrastructure/database/mappers/: test_rule.py  test_transaction.py
tests/unit/infrastructure/database/models/: test_decision.py  test_rule.py  test_transaction.py
tests/unit/infrastructure/ingestion/: __init__.py  test_dataframe_adapter.py  test_file_reader.py  test_ingestor.py  test_row_adapter.py
tests/unit/infrastructure/rule_engine/: test_repositories.py
